Fixes for change breakpoint for collapsed nav to md

--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -320,16 +320,17 @@
     height: 79px;
   }
 
-  .navbar-brand img {
-    max-height: calc(#{$topbar-height-sm} - 10px);
-  }
-
   #content-wrapper {
     margin-top: 0;
   }
 
   .navbar-brand {
+    height: #{$topbar-height-md};
     margin-left: 0;
+
+    img {
+      max-height: calc(#{$topbar-height-md} - 10px);
+    }
   }
 
   .logo {
@@ -406,12 +407,5 @@
     .navbar-collapse .fa-chevron-down {
       display: none;
     }
-  }
-}
-
-@include media-breakpoint-up(lg) {
-
-  .navbar-brand img {
-    max-height: calc(#{$topbar-height-md} - 10px);
   }
 }
